# horizon

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  config.example.toml  justfile
.cargo/: config.toml
.codex/: delegation-workflow.md
.config/: nextest.toml
crates/horizon-agent/: Cargo.toml
crates/horizon-agent/skills/github-pr/: SKILL.md
crates/horizon-agent/skills/horizon-cli/: SKILL.md
crates/horizon-agent/skills/horizon-config/: SKILL.md
crates/horizon-agent/skills/horizon-distill/: SKILL.md
crates/horizon-agent/src/: client.rs  config.rs  contract.rs  frame.rs  instructions.rs  lib.rs  live.rs  policy.rs  prompt.rs  roles.rs  skills.rs  socket.rs  tests.rs  wire.rs
crates/horizon-agent/src/judge/: client.rs  handle.rs  mod.rs  parse.rs  prompt.rs  ratelimit.rs  record.rs  runtime.rs
crates/horizon-agent/src/persistence/event_log/: appender.rs  mod.rs  turn.rs  writer.rs
crates/horizon-agent/src/persistence/projection/duckdb/: append.rs  import.rs  mod.rs  projection.rs  query.rs  records.rs  schema.rs  shared_store.rs
crates/horizon-agent/src/providers/: mock.rs
crates/horizon-agent/src/providers/rig/: completion.rs  history.rs  mapping.rs  memory.rs  mod.rs  model_catalog.rs  session.rs  stream.rs  tests.rs
crates/horizon-agent/src/tools/: approval.rs  catalog.rs  execution.rs  mod.rs  network.rs  processing.rs  state.rs  tests.rs  todo.rs
crates/horizon-agent/src/tools/bash/: cargo.rs  exec.rs  git.rs  mod.rs  output.rs  registry.rs  tests.rs
crates/horizon-agent/src/tools/bash/output/: tests.rs
crates/horizon-agent/src/tools/config/: mod.rs  write.rs
crates/horizon-agent/src/tools/fs/: edit.rs  glob.rs  grep.rs  locks.rs  mod.rs  patch.rs  read.rs  safety.rs  staleness.rs  traverse.rs  write.rs
crates/horizon-agent/src/tools/recall/: mod.rs  tests.rs
crates/horizon-agent/src/tools/web/: code_search.rs  fetch.rs  mod.rs  search.rs  ssrf.rs
crates/horizon-agent/src/transcript/: bursts.rs  diff.rs  grouping.rs  mod.rs  receipt.rs  tool_call.rs
crates/horizon-agent/tests/: tier1_network_containment.rs
crates/horizon-agentd/: Cargo.toml
crates/horizon-agentd/src/: main.rs  session.rs
crates/horizon-agentd/tests/: e2e.rs
crates/horizon-cli/: Cargo.toml
crates/horizon-cli/src/: cli.rs  client.rs  commands.rs  lib.rs  output.rs
crates/horizon-cli/tests/: integration.rs
crates/horizon-config/: Cargo.toml
crates/horizon-config/src/: lib.rs  tests.rs  warnings.rs
crates/horizon-control/: Cargo.toml
crates/horizon-control/src/: contract.rs  lib.rs  socket.rs  wire.rs
crates/horizon-control/src/host/: connection.rs  executor.rs  listener.rs  mod.rs  socket.rs
crates/horizon-ctl/: Cargo.toml
crates/horizon-ctl/src/: cli.rs  client.rs  commands.rs  confirm.rs  lib.rs  main.rs  output.rs
crates/horizon-ctl/tests/: integration.rs
crates/horizon-sandbox/: Cargo.toml  NOTICE
crates/horizon-sandbox-proxy/: Cargo.toml
crates/horizon-sandbox-proxy/src/: allowlist.rs  bridge.rs  denial_log.rs  error.rs  handler.rs  lib.rs  proxy.rs  tests.rs
crates/horizon-sandbox-proxy/tests/: containment.rs
crates/horizon-sandbox-runtime/: Cargo.toml  THIRD_PARTY_NOTICES.md  UPSTREAM.md
crates/horizon-sandbox-runtime/src/: approval.rs  evidence.rs  execute.rs  lib.rs  linux.rs  report.rs
crates/horizon-sandbox-runtime/src/linux/: filter.rs  network.rs  open.rs
crates/horizon-sandbox/src/: caps.rs  denial.rs  error.rs  grant.rs  helper.rs  lib.rs  policy.rs  tmpdir.rs
crates/horizon-sandbox/src/linux/: bwrap.rs  caps.rs  landlock.rs  mod.rs  seccomp.rs  tests.rs
crates/horizon-sandbox/src/macos/: mod.rs  sbpl.rs
crates/horizon-sandbox/tests/: linux_supervised_helper.rs
crates/horizon-session-protocol/: Cargo.toml
crates/horizon-session-protocol/examples/: check_wire_schema.rs
crates/horizon-session-protocol/schema/: session-wire.json
crates/horizon-session-protocol/src/: legacy.rs  lib.rs  schema_check.rs
crates/horizon-session-protocol/tests/: frame_watch.rs  limits.rs  skew.rs
crates/horizon-sessiond/: Cargo.toml
crates/horizon-sessiond/src/: hub.rs  main.rs  network.rs  session.rs  terminal.rs  worktree.rs
crates/horizon-sessiond/tests/: e2e.rs  latency_probe.rs  wire_schema.rs
crates/horizon-terminal-core/: Cargo.toml
crates/horizon-terminal-core/src/: contract.rs  core.rs  lib.rs  protocol.rs  session_loop.rs  tests.rs  types.rs
crates/horizon-terminal-core/src/core/: color.rs  events.rs  input.rs  render.rs
crates/horizon-terminal-core/src/protocol/: kitty_keyboard.rs
crates/horizon-terminal-core/src/protocol/kitty_keyboard/: tests.rs
crates/horizon-terminal-core/src/types/: color.rs  frame.rs  key_event.rs  mouse.rs  size.rs
crates/horizon-winit-platform/: Cargo.toml
crates/horizon-winit-platform/src/: active_loop.rs  app_handler.rs  clipboard.rs  cursor.rs  dispatcher.rs  display.rs  input.rs  input_trace.rs  lib.rs  macos_menu.rs  platform.rs  queue.rs  window.rs
crates/horizon-workspace/: Cargo.toml
crates/horizon-workspace/src/: commands.rs  layout.rs  lib.rs  mode.rs  nav.rs  operations.rs  persistence.rs  query.rs  session.rs  session_id.rs  snapshot.rs  tests.rs  types.rs
crates/horizon-workspace/src/types/: entity.rs  id.rs  kind.rs  summary.rs  tree.rs
docs/: agent-approval-design.md  agent-composer-cursor-design.md  agent-duckdb-state-design.md  agent-feedback-design.md  roadmap.md  (+36 more)
shell-gpui/: Cargo.toml
shell-gpui/src/: control_plane.rs  keymap.rs  main.rs  session_manager.rs  terminal_focus.rs  theme.rs  view_chooser.rs  workspace.rs
shell-gpui/src/agent/: connection.rs  mod.rs  view.rs
shell-gpui/src/terminal/: input.rs  mod.rs  pty.rs  session.rs
spike/remoc/: Cargo.toml
spike/remoc/src/: frames.rs  io_count.rs  lib.rs  skew.rs  svc.rs
spike/remoc/tests/: cross_version.rs  ergonomics.rs  skew.rs
spikes/gpui-terminal/: Cargo.toml
spikes/gpui-terminal/src/: colors.rs  main.rs  pty.rs
spikes/gpui-winit/: Cargo.toml
spikes/gpui-winit/src/: active_loop.rs  app_handler.rs  dispatcher.rs  display.rs  main.rs  platform.rs  window.rs
(+347 files in other folders)
