[workspace]
members = [
    ".",
    "crates/horizon-agent",
    "crates/horizon-sessiond",
    "crates/horizon-control",
    "crates/horizon-cli",
    "crates/horizon-session-protocol",
    "crates/horizon-terminal-core",
    "crates/horizon-config",
    "crates/horizon-workspace",
    "crates/horizon-winit-platform",
    "crates/horizon-sandbox",
    "crates/horizon-sandbox-proxy",
]

[package]
name = "horizon"
version = "0.1.0"
edition = "2021"

[dependencies]
alacritty_terminal = "0.26.0"
crossbeam-channel = "0.5"
futures = "0.3"
# gpui is deliberately left unpinned here: gpui-component's own Cargo.toml
# depends on gpui without a `rev` too, and adding one only to *our* edge
# splits the graph into two incompatible `gpui` instances ("multiple
# different versions of crate `gpui`" compile errors) since Cargo treats a
# rev-pinned git source and a floating one as different SourceIds even
# when they currently resolve to the same commit. A `[patch]` override was
# also tried and rejected by Cargo itself ("patches must point to
# different sources") — there is no manifest-level fix. The committed
# Cargo.lock is therefore the only pin for this crate; if it ever drifts
# (e.g. a `cargo update`/`cargo generate-lockfile` re-resolves it to a new
# upstream HEAD), restore the intended commit (currently
# 5f8a7413a31769e0882357f90dc424b3962ac72d) with
# `cargo update -p gpui --precise <sha>` or bump deliberately the same
# way. The quality gate now runs clippy and nextest with `--locked`, so
# any such drift fails the gate loudly instead of silently re-resolving
# (see AGENTS.md / hooks/pre-commit).
gpui = { git = "https://github.com/zed-industries/zed" }
# gpui-component/gpui-component-assets have no such conflict (nothing
# else in the graph depends on them), so they carry an explicit pin.
# Bump deliberately: update the rev below, then
# `cargo update -p gpui-component -p gpui-component-assets`.
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "0775df394083c1ed74f36f846b78868d1267398f" }
# Bundled SVGs gpui-component's own components (e.g. `TitleBar`'s window
# control icons) resolve through the asset source registered below.
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "0775df394083c1ed74f36f846b78868d1267398f" }
horizon-agent = { path = "crates/horizon-agent" }
horizon-cli = { path = "crates/horizon-cli" }
horizon-config = { path = "crates/horizon-config" }
horizon-control = { path = "crates/horizon-control" }
horizon-session-protocol = { path = "crates/horizon-session-protocol" }
horizon-terminal-core = { path = "crates/horizon-terminal-core" }
horizon-workspace = { path = "crates/horizon-workspace" }
# `horizon-winit-platform` (see docs/winit-backend-design.md) is the only
# windowing backend Horizon uses on every OS — a plain dependency, not
# target-gated. Removing our own `gpui_platform` dependency (see the
# now-deleted `[target.'cfg(not(target_os = "linux"))'.dependencies]`
# block this replaced) actually drops it from the build graph entirely:
# `gpui-component`'s *workspace* root depends on `gpui_platform` (its own
# demo/story binary), but the `gpui-component` library crate Horizon
# depends on does not — confirmed by `gpui_linux`/`gpui_macos`/
# `gpui_platform`/`gpui_web`/`gpui_windows` all disappearing from
# Cargo.lock once this crate's dependency on `gpui_platform` was removed.
horizon-winit-platform = { path = "crates/horizon-winit-platform" }
serde_json = "1.0"
termwiz = "0.23.3"
tokio = { version = "1.52", features = ["rt", "net", "io-util", "time", "macros"] }
# The theme settings view's explicit-Save writer (`src/theme_settings/save.rs`):
# edits only the `[theme]`/`[theme.ansi]` seed keys in the user's config
# file, preserving every other section, comment, and ordering byte-for-byte
# -- a plain `toml`-crate round trip (parse to a Rust struct, reserialize)
# would lose exactly that. Default features (`display`+`parse`) are enough;
# no `serde` feature needed since the writer edits the `DocumentMut` tree
# directly rather than (de)serializing a typed struct through it.
toml_edit = "0.25"
unicode-width = "0.2"
uuid = { version = "1.18", features = ["v4", "serde"] }

[lints.clippy]
all = { level = "warn", priority = -1 }

# Debug-build CPU profiles show the hot code lives almost entirely in
# dependencies (gpui's Scene::push_layer/BoundsTree comparisons ~31%,
# taffy layout ~16%), so optimize external crates even in dev builds.
# The `"*"` wildcard does not match workspace members, which keep the
# default dev opt-level for debuggability and fast incremental builds.
[profile.dev.package."*"]
opt-level = 3
