# The GPUI shell — deliberately its own workspace (empty [workspace]
# table) so gpui's dependency tree never mixes into the Floem lockfile.
# Folds into the root workspace when the Floem shell retires — see
# docs/gpui-migration-design.md.
[package]
name = "horizon-shell-gpui"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# gpui/gpui-component ride git HEAD by spec; the committed Cargo.lock is
# the actual pin (rev-pinning gpui in [dependencies] would split it from
# gpui-component's own unpinned gpui dep into two incompatible
# instances). Bump deliberately with `cargo update`.
alacritty_terminal = "0.26.0"
anyhow = "1.0"
crossbeam-channel = "0.5"
futures = "0.3"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
horizon-terminal-core = { path = "../crates/horizon-terminal-core" }
portable-pty = "0.9.0"
termwiz = "0.23.3"
unicode-width = "0.2"
horizon-workspace = { version = "0.1.0", path = "../crates/horizon-workspace" }
horizon-control = { version = "0.1.0", path = "../crates/horizon-control" }
serde_json = "1.0"
uuid = "1.18"
horizon-agent = { version = "0.1.0", path = "../crates/horizon-agent" }
tokio = { version = "1.52", features = ["rt", "net", "io-util", "time", "macros"] }
horizon-config = { version = "0.1.0", path = "../crates/horizon-config" }

[lints.clippy]
all = { level = "warn", priority = -1 }
