[package]
name = "horizon-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
duckdb = { version = "1", features = ["bundled"] }
futures-util = "0.3"
globset = "0.4"
horizon-session-protocol = { path = "../horizon-session-protocol" }
ignore = "0.4"
libc = "0.2"
regex = "1"
rig-core = "0.39.0"
rig-memory = "0.39.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "io-util", "process", "signal", "time"] }
tokio-util = "0.7"
tracing = "0.1"
toml = "0.8"
uuid = { version = "1.18", features = ["v4", "serde"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
