[package]
name = "horizon-control"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[lints.clippy]
all = { level = "warn", priority = -1 }

[dev-dependencies]
uuid = { version = "1.18", features = ["v4"] }
