# Network-proxy leg of the agent approval trust model
# (`docs/agent-approval-design.md`, "Sandbox architecture" / "Staging" leg
# 4): a loopback-only domain-allowlist HTTP/HTTPS CONNECT proxy (built on
# `hudsucker`). Kept as a sibling crate to `horizon-sandbox`
# rather than a module inside it: this crate is inherently async
# (tokio/hyper-based, one long-lived proxy per isolated agent session),
# while `horizon-sandbox` is a deliberately synchronous, dependency-light
# per-OS process-containment layer -- see the crate root doc for the split
# rationale.
[package]
name = "horizon-sandbox-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# `default-features = false` drops `rcgen-ca` (we supply our own
# never-invoked `CertificateAuthority` stub -- this proxy never terminates
# TLS, see `handler.rs`) and `decoder` (unused: we never decode
# request/response bodies). `rustls-client`/`native-tls-client` are also
# skipped: the plain (non-CONNECT) HTTP forwarding path uses hudsucker's
# own re-exported `hyper_util::HttpConnector`, which needs neither.
hudsucker = { version = "0.25.0", default-features = false }
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt", "net", "io-util", "sync", "macros"] }

[dev-dependencies]
tokio = { version = "1.52", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
