# Sandbox spike for the agent approval trust model (`docs/agent-approval-design.md`,
# "Sandbox architecture"): a thin, product-owned unified API over per-OS
# containment (Linux: nono/Landlock, see `docs/roadmap.md`'s backlog-60
# entry; macOS sandbox-exec+SBPL), plus sandbox-denial classification.
[package]
name = "horizon-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0"

[target.'cfg(unix)'.dependencies]
# `denial.rs`'s SIGSYS-exit-code check wants `libc` on every Unix, not
# just Linux (it's `cfg(unix)`, so it also builds -- compile-structured
# only -- for the macOS backend).
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# The Linux sandbox backend (`docs/roadmap.md`'s backlog-60 "option C"
# decision, de-risked in `experiments/nono-spike/`): Landlock-based
# capability sandboxing, replacing the old self-built
# bwrap+seccompiler+landlock stack. macOS keeps its own sandbox-exec+SBPL
# backend (untouched, separate follow-up), so this dependency stays
# Linux-only.
nono = "0.68"

[lints.clippy]
all = { level = "warn", priority = -1 }
