[package]
name = "horizon-session-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
schemars = { version = "1", features = ["uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = ["io-util"] }
uuid = { version = "1.18", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
