[package]
name = "horizon-session-protocol"
version = "0.1.0"
edition = "2021"

# The dependency direction inverted with the v10 remoc cutover
# (docs/remoc-adoption-design.md §2): the sister vocabulary crates used to
# depend on this crate for `Envelope` helpers; now this crate depends on
# *them*, because the hub trait's signatures name their types
# (`TerminalSpawnSpec`, `SessionNew`, ...). The vocabularies themselves stay
# serde-plain and remoc-free -- remoc appears only here (and in the daemon /
# UI binaries that host or call the hub).
[dependencies]
horizon-agent = { path = "../horizon-agent" }
horizon-terminal-core = { path = "../horizon-terminal-core" }
remoc = { workspace = true }
schemars = { version = "1", features = ["uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.18", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "net", "time", "io-util"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
