[package]
name = "horizon-sessiond"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
horizon-agent = { path = "../horizon-agent" }
libc = "0.2"
serde_json = "1.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "sync", "time"] }
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]

[lints.clippy]
all = { level = "warn", priority = -1 }
