[package]
name = "horizon-terminal-core"
version = "0.1.0"
edition = "2021"

# `docs/session-daemon-design.md` decision 9: the terminal's byte-driven
# brain (VT emulation + the 16ms-coalescing/sync-failsafe session loop),
# extracted headless -- no `floem`/`ui` dependency, mirroring
# `crates/horizon-agent`. PTY ownership (`portable-pty`, threads,
# environment) stays in the `horizon` binary; this crate only ever sees
# bytes in and commands/updates out over plain channels.
[dependencies]
alacritty_terminal = "0.26.0"
crossbeam-channel = "0.5"
schemars = { version = "1", features = ["uuid1"] }
serde = { version = "1.0", features = ["derive"] }
# Real (non-dev) dependency since the schemars derives name
# `serde_json::Value` as the schema stand-in for termwiz-owned key types.
serde_json = "1.0"
termwiz = { version = "0.23.3", features = ["use_serde"] }
unicode-width = "0.2"
uuid = { version = "1.18", features = ["serde"] }

[dev-dependencies]
# Only used to build OSC 52 clipboard-write test fixtures, same as the
# pre-extraction `horizon` crate's dev-dependency this one replaces.
base64 = "0.22"
serde_json = "1.0"

[lints.clippy]
all = { level = "warn", priority = -1 }
