# Production `gpui::Platform` implementation over winit — the only
# windowing backend Horizon uses, on every OS (owner decision 2026-07-12:
# unify on this crate everywhere rather than keep a per-OS split; see
# docs/winit-backend-design.md). Started as the Linux adoption step of the
# winit windowing backend roadmap item, porting `spikes/gpui-winit/`
# (docs/research/winit-backend-spike.md, legs 1+2) into a real workspace
# member; the crate itself was always mostly OS-agnostic (winit/gpui_wgpu
# are cross-platform), so unifying meant removing the few Linux-only
# gates (see src/lib.rs) rather than a rewrite.
#
# winit/gpui_wgpu/raw-window-handle/uuid are plain (non-target-gated)
# dependencies below. `arboard`'s Linux/BSD-only primary-selection API
# (`wayland-data-control` feature) is safe to enable unconditionally:
# arboard's own manifest target-gates the extra dependency it pulls in, so
# the feature flag is a no-op on macOS/Windows — see clipboard.rs, which
# still cfg-gates the primary-selection *methods* to `target_os = "linux"`
# since `arboard::{GetExtLinux, SetExtLinux, LinuxClipboardKind}` are
# themselves only exported on that cfg family.
#
# `muda` (native macOS app menu, see platform.rs's `set_menus`/`activate`
# and macos_menu.rs) is the one genuinely macOS-only dependency, gated
# below — Horizon has no menu-bar use for it on Linux/Windows.
#
# gpui/gpui_wgpu ride the same unpinned git source as the root crate's own
# `gpui` (see the long comment on it in the root Cargo.toml) rather than
# the spike's pinned rev — a second, differently pinned `gpui` source
# would split the dependency graph ("multiple different versions of crate
# `gpui`").
[package]
name = "horizon-winit-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures = "0.3"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_wgpu = { git = "https://github.com/zed-industries/zed" }
log = "0.4"
# wayland-data-control is needed for primary-selection support under native
# Wayland (X11 always gets it via x11rb, an unconditional arboard
# dependency on that target regardless of this feature); image-data is
# left off the default features since Horizon only ever puts text on the
# clipboard. Both are no-ops outside Linux/BSD — see the crate-level
# comment above.
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
raw-window-handle = "0.6"
uuid = "1"
winit = "0.30"

# The standard winit companion for native OS menus (no windowing-toolkit
# menu API of its own). Only macOS needs it today: Windows keeps a
# documented no-op stub (see platform.rs), and Linux never had this gap
# (sctk-adwaita's CSD carries no menu bar to begin with).
[target.'cfg(target_os = "macos")'.dependencies]
muda = { version = "0.19", default-features = false }

# Test-only: constructs `gpui::RunnableVariant` (`async_task::Runnable<RunnableMeta>`)
# directly in dispatcher.rs's tests, without spinning up a full `gpui::App`.
# Already in the lock file transitively (gpui/scheduler use it) — this just
# names the exact version we compile against.
[dev-dependencies]
async-task = "4.7"

[lints.clippy]
all = { level = "warn", priority = -1 }
