# The workspace domain model — tabs, panes, the N-ary layout tree,
# session attachments, operations/queries, workspace-mode state, and
# spatial navigation — extracted framework-free so both shells (Floem
# `src/`, GPUI `shell-gpui/`) share one implementation. See
# docs/gpui-migration-design.md; mirrors the horizon-terminal-core /
# horizon-agent extraction pattern.
[package]
name = "horizon-workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }

[lints.clippy]
all = { level = "warn", priority = -1 }

[features]
# Test-fixture helpers (split_active etc.) that downstream crates' test
# suites build fixtures with; `#[cfg(test)]` alone would keep them
# invisible outside this crate's own test build.
test-fixtures = []
