# The workspace domain model — tabs, panes, the N-ary layout tree,
# session attachments, operations/queries, workspace-mode state, and
# spatial navigation — extracted framework-free (no GPUI dependency) so
# the GPUI shell's `src/` holds only view projections and wiring over
# this crate's model. See docs/gpui-migration-design.md; mirrors the
# horizon-terminal-core / horizon-agent extraction pattern.
[package]
name = "horizon-workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
